--- a/package.json
+++ b/package.json
@@ -22,7 +22,12 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
     "auth0-js": "^9.0.0",
+    "bootstrap": "4.0.0-beta.2",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.2.1",
+    "ngx-bootstrap": "^2.0.0-rc.0",
+    "popper.js": "^1.12.9",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
